--- a/subpages/poster.html
+++ b/subpages/poster.html
@@ -1,1 +1,1 @@
-<img src="../files/rocnikova_prace-david_vlcek.png" alt="pozvánka" class="rounded-2xl size-1/2 object-contain">
+<img src="../files/rocnikova_prace-david_vlcek.png" alt="pozvánka" class="h-[75vh] object-contain">
